add webpack code splitting support

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="app"></div>
 
-    <script src="externals.js"></script>
+    <script src="vendor.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
